force-app/main/default/objects/Year_Color__mdt/Year_Color__mdt.object-meta.xml
<CustomObject>
    <label>Year Color</label>
    <pluralLabel>Year Colors</pluralLabel>
</CustomObject>