force-app/main/default/objects/Year_Color__mdt/fields/textColor__c.field-meta.xml
<CustomField>
    <fullName>textColor__c</fullName>
    <label>textColor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>